package net.proselyte.basepatterns.behavioral.state;

public class Coding {
}
